--- a/romance.html
+++ b/romance.html
@@ -128,7 +128,7 @@
 <body>
     <header>
         <div class="header">
-            <a href="main.html">
+            <a href="index.html">
                 <img id="three" src="three.png">
             </a>
             <img id="logo" src="logo.png" alt="Dramarama Logo">
@@ -139,7 +139,7 @@
     
     <div class="home">
         <div class="box">
-            <a href="main.html">
+            <a href="index.html">
                 <img style="width: 80px; background-color: #082757;" src="home.png" alt="home">
             </a>
         </div>
