--- a/action.html
+++ b/action.html
@@ -140,7 +140,7 @@
                            </div>
 			   <div class = "film">
 			      <a href="https://www.bilibili.tv/en/search">
-				 img style = "width: 80px; background-color: #082757;" src="film.png" alt="Bilibili link">
+				 <img style = "width: 80px; background-color: #082757;" src="film.png" alt="Bilibili link">
 			      </a>
 			   </div>      
 		       </div>
