--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             top: 80px;
             left: 0;
             width: 100px;
-            height: 800px;
+            height: 100%;
             overflow-y: auto;
             padding-top: 5px;
         }
