--- a/action.html
+++ b/action.html
@@ -65,7 +65,7 @@
 		    padding-top: 120px;			
                     }
 		.home {
-                    background-color: #082757;
+                    background: linear-gradient(to bottom, #082757 50%, #0033cc 100%);
 		    position: fixed;
                     top: 80px;
                     left: 0;
