--- a/medical.html
+++ b/medical.html
@@ -65,12 +65,12 @@
     }
 
     .home {
-        background-color: #082757;
+        background: linear-gradient(to bottom, #082757 50%, #0033cc 100%);
         position: fixed;
         top: 80px;
         left: 0;
         width: 100px;
-        height: 1300px;
+        height: 100%;
         overflow-y: auto;
         padding-top: 9px;
     }
